<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    tools:context=".ActivityLogin">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/activity_save_tl_parse_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/activity_save_btn_save_parse"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/activity_save_tf_parse_value"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/value_in_parse"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/activity_save_btn_save_parse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_in_parse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_save_tl_parse_value"
        app:layout_constraintBottom_toTopOf="@id/activity_save_tv_asked_value" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/activity_save_tv_asked_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_asked_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_save_btn_save_parse"
        app:layout_constraintBottom_toTopOf="@id/activity_save_btn_get" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/activity_save_btn_get"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_value"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_save_tv_asked_value" />

</androidx.constraintlayout.widget.ConstraintLayout>